--- a/WebApplication4/Web.config
+++ b/WebApplication4/Web.config
@@ -10,9 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication4-20170123083531.mdf;Initial Catalog=aspnet-WebApplication4-20170123083531;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="CVContext"
-         connectionString="Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\Orville\\Documents\\Visual Studio 2015\\Projects\\WebApplication4\\WebApplication4\\App_Data\\CVDB.mdf;Integrated Security = True"
-         providerName="System.Data.SqlClient"/>
+    <add name="CVContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Orville\Documents\Visual Studio 2015\Projects\WebApplication4\WebApplication4\App_Data\CVDB.mdf;Integrated Security = True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
