--- a/WebApplication4/WebApplication4.csproj
+++ b/WebApplication4/WebApplication4.csproj
@@ -206,11 +206,15 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CVContext.cs" />
-    <Compile Include="Models\CVModel.cs" />
+    <Compile Include="Models\EducationModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\InstitutionModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\PersonalStatmentModel.cs" />
+    <Compile Include="Models\QualificationModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModel\CvViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\CVDB.mdf" />
