still trying to make Edit Modal

--- a/WebApplication4/Web.config
+++ b/WebApplication4/Web.config
@@ -8,12 +8,18 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication4-20170123083531.mdf;Initial Catalog=aspnet-WebApplication4-20170123083531;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="CVContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Orville\Documents\Visual Studio 2015\Projects\WebApplication4\WebApplication4\App_Data\CVDB.mdf;Integrated Security = True" providerName="System.Data.SqlClient" />
-    <add name="Model1" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=Portfolio.Models.Model1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Model11_Context" connectionString="data source=Orville-PC;initial catalog=CVDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+   
+    <add 
+      name="CVContext" 
+      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Orville\Documents\Visual Studio 2015\Projects\WebApplication4\WebApplication4\App_Data\CVDB.mdf;Integrated Security = True" 
+      providerName="System.Data.SqlClient" />
+    <add name="FullCV" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Portfoliov1.Models.CVDataModel;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+         providerName="System.Data.SqlClient"/>
+    
   </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
